# idavoll_grf_extractor

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  bundles.toml  translations.toml
.claude/: settings.local.json
src/: bundles.rs  headgear_slots.rs  main.rs  rathena.rs  translate.rs
util/: translate.py
