[package]
name = "idavoll_grf_extractor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "idavoll-grf-extractor"
path = "src/main.rs"

[dependencies]
encoding_rs = "0.8"
flate2 = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
